# embedded-holochain-demo

./: .gitignore  Cargo.toml  README.md  build-dna.sh
dna/sample/: Cargo.toml  dna.yaml  sample.dna
dna/sample/src/: lib.rs
embedded_holochain_runner/: Cargo.toml
embedded_holochain_runner/src/: embedded_runner.rs
src/: config.rs  main.rs
src/embedded_runner/: embedded_runner.rs  install_activate.rs
