[package]
name = "embedded-holochain-demo"
version = "0.0.1"
authors = ["Connor Turland <connorturland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.11"
embedded_holochain_runner = { git = "https://github.com/Sprillow/embedded-holochain-runner.git", rev = "752d5dc" }

[patch.crates-io]
rkv = { git = "https://github.com/holochain/rkv.git", branch = "master" }
lmdb-rkv = { git = "https://github.com/holochain/lmdb-rs.git" }