[package]
name = "sample"
version = "0.1.0"
authors = ["Connor Turland <connor@sprillow.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# use whatever hdk uses
serde = "*"
hdk = {git = "https://github.com/holochain/holochain.git", rev = "bdb9c55d504135df39ccb1c75896557a788d0ac0", package = "hdk"}
derive_more = "0.99.9"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

# compress
[profile.release]
opt-level = "z"